<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/colorfondo"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/saludo"
        android:layout_width="407dp"
        android:layout_height="81dp"
        android:accessibilityLiveRegion="polite"
        android:background="#BC1313"
        android:backgroundTint="#BEBF2828"
        android:bufferType="normal"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/layout2"
        android:layerType="none"
        android:text="@string/buenas_noches_david"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:autoSizeTextType="uniform"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="647dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:text="@string/hola_mundo_tpam_viles" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2"
        android:layout_width="409dp"
        android:layout_height="645dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="1dp"
        tools:visibility="visible">

        <Button
            android:id="@+id/button5"
            android:layout_width="140dp"
            android:layout_height="85dp"
            android:background="#912929"
            android:text="@string/aleatorio"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="332dp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="140dp"
            android:layout_height="85dp"
            android:background="#8BC34A"
            android:text="@string/ir_a_form"
            android:textColor="#37474F"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="476dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="135dp"
            android:layout_height="68dp"
            android:background="#15A6C3"
            android:text="@string/bot2"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="133dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="125dp"
            android:layout_height="67dp"
            android:background="#C33415"
            android:text="@string/bot1"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="133dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>